--- a/client/app/admin/admin.search.scss
+++ b/client/app/admin/admin.search.scss
@@ -11,9 +11,10 @@
 		input {
 			margin-right: 20px;
 			padding: 6px 6px;
-			border: none;
+			border: 1px solid #333;
 			box-shadow: none;
 			outline: none;
+			border-radius: 2px;
 		}
 	}
 }
