--- a/client/app/admin/admin.view.scss
+++ b/client/app/admin/admin.view.scss
@@ -1,6 +1,5 @@
 .admin-scheduler {
-	overflow: auto;
-	padding: 40px;
+	padding: 0 40px;
 
 	.year-col {
 		display: inline-block;
@@ -44,17 +43,17 @@
 		}
 
 		.semester-label.fall {
-			top: 204px;
+			top: 144px;
 			right: 17px;
 		}
 
 		.semester-label.spring {
-			top: 400px;
+			top: 340px;
 			right: 17px;
 		}
 
 		.semester-label.summer {
-			top: 605px;
+			top: 545px;
 			right: 17px;
 		}
 	}
@@ -108,6 +107,7 @@
 			overflow-y: hidden;
 			width: auto;
 			white-space: nowrap;
+			height: 700px;
 
 			.semester {
 				margin-bottom: 30px;
@@ -115,6 +115,21 @@
 				padding: 10px;
 				border-radius: 2px;
 				position: relative;
+			}
+
+			.courses {
+				margin: 0;
+				padding: 0;
+				height: 165px;
+				overflow: auto;
+
+				li {
+					list-style: none;
+					background: #F4F4F4;
+					border-radius: 2px;
+					padding: 0 10px;
+					border: 1px solid #ABA7A7;
+				}
 			}
 
 			.semester input {
