--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -15,6 +15,7 @@ html, body, .root-view {
 
 body {
 	background: url('../assets/images/noise.png');
+	min-width: 1100px;
 }
 
 h1, h2, h3, h4, h5, h6 {
